# flextext-converters

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
samples/flextext/: Freeform.flextext  FullyAnalyzed.flextext  Glossed.flextext  Unglossed.flextext
samples/sfm/: Freeform.sfm  Glossed.sfm  Unglossed.sfm
src/toolbox/: conversion_operations.py  file_picker_operations.py  flextext_operations.py  json_operations.py  main.py  marker_operations.py  output_operations.py  popup_operations.py  toolbox_converter.py  toolbox_operations.py  uuid_generation.py
src/toolbox/fieldworks_files/: Freeform.flextext  Freefrom.flextext  Glossed.flextext  Unglossed.flextext
src/toolbox/flextext_models/: __init__.py  flextext.py
src/toolbox/json_marker_files/: sample_markers.json  test_json_contents_simple.json
src/toolbox/marker_files/: sample_markers.typ  standard_markers.typ
src/toolbox/toolbox_files/: Freeform.sfm  Unglossed.sfm
tests/: test_convert_operations.py  test_flextext_operations.py  test_init.py  test_json_operations.py  test_marker_operations.py  test_output_operations.py  test_toolbox_operations.py  test_uuid_generation.py
tests/example_test_files/: marker_text.typ  marker_text1.typ  marker_text2.typ  marker_text3.typ  marker_text4.typ  toolbox_test.sfm  toolbox_test1.sfm  toolbox_test2.sfm
tests/output_test_files/: test_file_contents_simple.flextext  test_json_contents_complex.json  test_no_write_perms.flextext
