[metadata]
name = flextext-converters
description = flextext-converters
author = SIL LSDev and LightSys
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.12

[options]
packages =
    toolbox
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=8.0
    pytest-cov>=4.1
    mypy>=1.8
    flake8>=7.0.0
    tox>=4.13

[options.package_data]
toolbox = py.typed
